/**
 * \file RESP_1.hpp
 * \author Auto-coded
 * \brief Header file for the RESP_1 response
 * This is generated by running the testcmd.sh script.
 *
 *
 * \copyright
 * Copyright 2009-2015, by the California Institute of Technology.
 * ALL RIGHTS RESERVED.  United States Government Sponsorship
 * acknowledged. Any commercial use must be negotiated with the Office
 * of Technology Transfer at the California Institute of Technology.
 * <br /><br />
 * This software may be subject to U.S. export control laws and
 * regulations.  By accepting this document, the user agrees to comply
 * with all U.S. export laws and regulations.  User has the
 * responsibility to obtain export licenses, or other export authority
 * as may be required before exporting such information to foreign
 * countries or providing access to foreign persons.
 */
#ifndef _RESP_1_HPP_
#define _RESP_1_HPP_

#include <Fw/Types/BasicTypes.hpp>
#include <Svc/FPManager/Response.hpp>


namespace Svc {

//! class RESP_1
//!

class RESP_1 : public Response {

public:

    //! RESP_1 constructor
    //!
    RESP_1();
    
    //! RESP_1 destructor
    //!
    ~RESP_1();

    //! RESP_1 run method
    //! Returns true if the response sends out a command, else returns false
    //! The returned serialized command is in the comBuffer.
    //!
    bool run(Fw::ComBuffer& comBuffer);


PRIVATE:

    //! Keeps track of where in the command sequence
    //!
    U16 runCounter;

};

}

#endif
